@@ -1,5 +1,6 @@
 0.14
 Fixed a bug in the way comparison code where changes in the ordering of segments wouldn't be picked up.
+Fixed a bug in date parsing where the month was always being parsed a month in advance.
 
 0.13
 Modified the --bounding-polygon task so it can read files containing blank lines.
